--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<HEAD>
+<head>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   <title>Todo App</title>
-</HEAD>
+</head>
 <body>
 
   <div class="aaa">
@@ -13,7 +13,7 @@
   </div>
 
   <div class="centered-main-page-element">
-    <p id='topSectionForAddingElementToList'>
+    <p id='top-section-for-adding-element-to-list'>
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id='new-task'class="task" type="text">
@@ -22,16 +22,16 @@
     </p>
 
     <h3>Todo</h3>
-    <ul id='incompleteTasks'>
+    <ul id='incomplete-tasks'>
       <li>
         <input type='checkbox'><label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete"><img src="./remove.svg"></button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox"><label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
+        <input type="text" value="go shopping" class="task">
         <button class='edit'>Save</button>
         <button class="delete"><img src="./remove.svg"></button>
       </li>
@@ -48,6 +48,6 @@
     </ul>
   </div>
 
-<script type="text/javascript" SRC="app.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
