--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   <title>Todo App</title>
 </head>
@@ -9,22 +9,22 @@
 
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
-    <a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
   </div>
 
   <div class="centered-main-page-element">
-    <p id='top-section-for-adding-element-to-list'>
+    <p id="top-section-for-adding-element-to-list">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id='new-task'class="task" type="text">
+        <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
     </p>
 
     <h3>Todo</h3>
-    <ul id='incomplete-tasks'>
+    <ul id="incomplete-tasks">
       <li>
-        <input type='checkbox'><label class="task">Pay Bills</label>
+        <input type="checkbox"><label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete"><img src="./remove.svg"></button>
@@ -32,7 +32,7 @@
       <li class="edit-mode">
         <input type="checkbox"><label class="task">Go Shopping</label>
         <input type="text" value="go shopping" class="task">
-        <button class='edit'>Save</button>
+        <button class="edit">Save</button>
         <button class="delete"><img src="./remove.svg"></button>
       </li>
     </ul>
