--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Todo App</title>
   </head>
 
@@ -17,21 +19,21 @@
     <div class="centered-main-page-element">
       <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label></p>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
+        <input class="task-text" id="new-task">
         <button>Add</button>
       </div>
 
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
-          <input type="checkbox"><label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
+          <input class="task-text">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
-          <input type="checkbox"><label class="task">Go Shopping</label>
-          <input type="text" value="go shopping" class="task">
+          <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
+          <input class="task-text" value="go shopping">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
@@ -40,15 +42,15 @@
       <h3>Completed</h3>
       <ul id="completed-tasks">
         <li>
-          <input type="checkbox" checked><label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
+          <input class="task-text">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
 
-  <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
   </body>
 
 </html>
