--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
   <body>
 
-    <div class="aaa">
+    <header>
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
 
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label></p>
+    <main>
+      <p><label for="new-task">Add Item</label></p>
       <div class="task-row-wrapper">
         <input class="task-text" id="new-task">
         <button>Add</button>
@@ -32,8 +32,8 @@
           <button class="delete"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
-          <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
-          <input class="task-text" value="go shopping">
+          <input class="checkbox" type="checkbox"><label class="task"></label>
+          <input class="task-text" value="Go shopping">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
@@ -48,7 +48,7 @@
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </main>
 
   <script src="app.js"></script>
   </body>
