--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <main>
       <p><label for="new-task">Add Item</label></p>
-      <div class="task-row-wrapper">
+      <div class="task-wrapper">
         <input class="task-text" id="new-task">
-        <button>Add</button>
+        <button class="btn-add">Add</button>
       </div>
 
       <h3>Todo</h3>
@@ -28,14 +28,14 @@
         <li>
           <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
           <input class="task-text">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="btn-edit">Edit</button>
+          <button class="btn-delete"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
-          <input class="checkbox" type="checkbox"><label class="task"></label>
+          <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
           <input class="task-text" value="Go shopping">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="btn-edit">Save</button>
+          <button class="btn-delete"><img src="./remove.svg"></button>
         </li>
       </ul>
 
@@ -44,8 +44,8 @@
         <li>
           <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
           <input class="task-text">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="btn-edit">Edit</button>
+          <button class="btn-delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </main>
