--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="todo-tasks">
         <li>
           <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
           <input class="task-text">
@@ -40,7 +40,7 @@
       </ul>
 
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="done-tasks">
         <li>
           <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
           <input class="task-text">
