--- a/index.html
+++ b/index.html
@@ -8,49 +8,48 @@
     <link href="style.css" rel="stylesheet">
     <title>Todo App</title>
   </head>
-
   <body>
-
     <header>
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="the eisenhower-matrix urgent and important">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-
     <main>
-      <p><label for="new-task">Add Item</label></p>
-      <div class="task-wrapper">
-        <input class="task-text" id="new-task">
-        <button class="btn-add">Add</button>
-      </div>
-
-      <h3>Todo</h3>
-      <ul id="todo-tasks">
-        <li>
-          <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
-          <input class="task-text">
-          <button class="btn-edit">Edit</button>
-          <button class="btn-delete"><img src="./remove.svg"></button>
-        </li>
-        <li class="edit-mode">
-          <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
-          <input class="task-text" value="Go shopping">
-          <button class="btn-edit">Save</button>
-          <button class="btn-delete"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-
-      <h3>Completed</h3>
-      <ul id="done-tasks">
-        <li>
-          <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
-          <input class="task-text">
-          <button class="btn-edit">Edit</button>
-          <button class="btn-delete"><img src="./remove.svg"></button>
-        </li>
-      </ul>
+      <section class="add-item">
+        <p><label for="new-task">Add Item</label></p>
+        <div class="task-wrapper">
+          <input class="task-text" id="new-task">
+          <button class="btn-add">Add</button>
+        </div>
+      </section>
+      <section class="todo-list">
+        <h3>Todo</h3>
+        <ul id="todo-tasks">
+          <li>
+            <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
+            <input class="task-text">
+            <button class="btn-edit">Edit</button>
+            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
+          </li>
+          <li class="edit-mode">
+            <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
+            <input class="task-text" value="Go shopping">
+            <button class="btn-edit">Save</button>
+            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
+          </li>
+        </ul>
+      </section>
+      <section class="done-list">
+        <h3>Completed</h3>
+        <ul id="done-tasks">
+          <li>
+            <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
+            <input class="task-text">
+            <button class="btn-edit">Edit</button>
+            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
+          </li>
+        </ul>
+    </section>
     </main>
-
   <script src="app.js"></script>
   </body>
-
 </html>
