fix: delete label in first section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <section class="add-item">
-        <p><label for="new-task">Add Item</label></p>
+        <h3>Add Item</h3>
         <div class="task-wrapper">
           <input class="task-text" id="new-task">
           <button class="btn-add">Add</button>
