--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="style.css" rel="stylesheet">
     <title>Todo App</title>
   </head>
-  <body>
-    <header>
+  <body class="contetnt">
+    <header class="roof">
       <img src="./eisenhower-matrix.jpg" alt="the eisenhower-matrix urgent and important">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main>
+    <main class="center">
       <section class="add-item">
         <h3>Add Item</h3>
         <div class="task-wrapper">
@@ -28,13 +28,13 @@
             <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
             <input class="task-text">
             <button class="btn-edit">Edit</button>
-            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
+            <button class="btn-delete"><img src="./remove.svg" alt="delete"></button>
           </li>
           <li class="edit-mode">
             <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
             <input class="task-text" value="Go shopping">
             <button class="btn-edit">Save</button>
-            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
+            <button class="btn-delete"><img src="./remove.svg" alt="delete"></button>
           </li>
         </ul>
       </section>
@@ -45,7 +45,7 @@
             <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
             <input class="task-text">
             <button class="btn-edit">Edit</button>
-            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
+            <button class="btn-delete"><img src="./remove.svg" alt="delete"></button>
           </li>
         </ul>
     </section>
