--- a/index.html
+++ b/index.html
@@ -1,55 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <title>Todo App</title>
-  </head>
-  <body>
-    <header>
-      <img src="./eisenhower-matrix.jpg" alt="the eisenhower-matrix urgent and important">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </header>
-    <main>
-      <section class="add-item">
-        <h3>Add Item</h3>
-        <div class="task-wrapper">
-          <input class="task-text" id="new-task">
-          <button class="btn-add">Add</button>
-        </div>
-      </section>
-      <section class="todo-list">
-        <h3>Todo</h3>
-        <ul id="todo-tasks">
-          <li>
-            <input class="checkbox" type="checkbox"><label class="task">Pay Bills</label>
-            <input class="task-text">
-            <button class="btn-edit">Edit</button>
-            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
-          </li>
-          <li class="edit-mode">
-            <input class="checkbox" type="checkbox"><label class="task">Go Shopping</label>
-            <input class="task-text" value="Go shopping">
-            <button class="btn-edit">Save</button>
-            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
-          </li>
-        </ul>
-      </section>
-      <section class="done-list">
-        <h3>Completed</h3>
-        <ul id="done-tasks">
-          <li>
-            <input class="checkbox" type="checkbox" checked><label class="task">See the Doctor</label>
-            <input class="task-text">
-            <button class="btn-edit">Edit</button>
-            <button class="btn-delete"><img src="./remove.svg" alt=""></button>
-          </li>
-        </ul>
-    </section>
-    </main>
-  <script src="app.js"></script>
-  </body>
+<html>
+<HEAD><title>Todo App</title>
+<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+</HEAD>
+<body>
+<div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
+<div class="centered-main-page-element"><p id='topSectionForAddingElementToList'><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id='new-task'class="task" type="text"><button>Add</button></div>
+</p><h3>Todo</h3>
+<ul id='incompleteTasks'>
+<li><input type='checkbox'><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
+<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
+</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+</li>
+</ul>
+</div>
+<script type="text/javascript" SRC="app.js"></script>
+</body>
 </html>
